# fastapi-celery-project

./: README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  test.db
alembic/: env.py
alembic/versions/: 650a7b20030f_add_member_model.py  a2d0ceba1750_.py  af9caf63f9e5_.py
compose/local/fastapi/: Dockerfile  entrypoint
compose/local/fastapi/celery/flower/: start
compose/local/fastapi/celery/worker/: start
project/: __init__.py  celery_utils.py  config.py  database.py
project/tdd/: __init__.py  factories.py  views.py
project/users/: __init__.py  factories.py  tasks.py  views.py
project/users/templates/: form.html
project/ws/: views.py
tests/: conftest.py  test_celery_utils.py
tests/tdd/: test_views.py
tests/users/: test_tasks.py  test_views.py
