[tool.poetry]
name = "fastapi-celery-project"
version = "0.1.0"
description = ""
authors = ["Anton Shefer <rezajkee@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_celery_project"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.89.1"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
celery = "^5.2.7"
redis = "^4.4.2"
flower = "^1.2.0"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"
watchfiles = "^0.18.1"
Jinja2 = "^3.1.2"
requests = "^2.28.2"
asgiref = "^3.6.0"
asyncio-redis = "^0.16.0"
broadcaster = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 80
extend-exclude = '''
/(
  | alembic
)/
'''
